:bug: [#4917] Backport backwards-compatible approach for reworked form navigation
Backport-of: #5237

--- a/src/openforms/templates/cookie_consent/cookiegroup_list.html
+++ b/src/openforms/templates/cookie_consent/cookiegroup_list.html
@@ -21,7 +21,7 @@
             </ul>
 
             {% if referer %}
-                <a href="{{ referer }}" class="utrecht-link utrecht-link--openforms">
+                <a href="{{ referer }}" class="utrecht-link utrecht-link--html-a utrecht-link--openforms">
                     {% trans "Close" %}
                 </a>
             {% endif %}
