--- a/src/openforms/templates/includes/a11y_toolbar.html
+++ b/src/openforms/templates/includes/a11y_toolbar.html
@@ -2,10 +2,10 @@
 <nav class="a11y-toolbar">
     <ul class="a11y-toolbar__list">
         <li class="a11y-toolbar__list-item">
-            <a class="utrecht-link utrecht-link--openforms a11y-toolbar__window-print-action" href="#">{% trans "Print this page" %}</a>
+            <a class="utrecht-link utrecht-link--html-a utrecht-link--openforms a11y-toolbar__window-print-action" href="#">{% trans "Print this page" %}</a>
         </li>
         <li class="a11y-toolbar__list-item">
-            <a class="utrecht-link utrecht-link--openforms" href="#main-content">{% trans "Back to top" %}</a>
+            <a class="utrecht-link utrecht-link--html-a utrecht-link--openforms" href="#main-content">{% trans "Back to top" %}</a>
         </li>
     </ul>
 </nav>
