--- a/src/openforms/templates/includes/page-header.html
+++ b/src/openforms/templates/includes/page-header.html
@@ -18,7 +18,7 @@ include the SDK snippet directly.
 
 <header class="utrecht-page-header {% if theme.logo %}utrecht-page-header--openforms-with-logo{% endif %}">
     <a
-        class="utrecht-link utrecht-link--openforms utrecht-page-header__openforms-return-url"
+        class="utrecht-link utrecht-link--html-a utrecht-link--openforms utrecht-page-header__openforms-return-url"
         href="{% firstof config.main_website '#' %}"
         title="{{ logo_alt }}"
         aria-label="{{ logo_alt }}"
