--- a/src/openforms/ui/static/ui/scss/_nlds.scss
+++ b/src/openforms/ui/static/ui/scss/_nlds.scss
@@ -1,6 +1,6 @@
-@import '@utrecht/components/heading-2';
-@import '@utrecht/components/link-list';
-@import '@utrecht/components/page';
-@import '@utrecht/components/page-content';
-@import '@utrecht/components/page-header';
-@import '@utrecht/components/page-footer';
+@use '@utrecht/components/heading-2';
+@use '@utrecht/components/link-list';
+@use '@utrecht/components/page';
+@use '@utrecht/components/page-content';
+@use '@utrecht/components/page-header';
+@use '@utrecht/components/page-footer';
