--- a/src/openforms/ui/templates/ui/views/abstract/list.html
+++ b/src/openforms/ui/templates/ui/views/abstract/list.html
@@ -14,7 +14,7 @@
                             <li class="list__item">
                                 <a
                                     href="{{ object.get_absolute_url }}"
-                                    class="utrecht-link utrecht-link--openforms"
+                                    class="utrecht-link utrecht-link--html-a utrecht-link--openforms"
                                 >{{ object }}</a>
                             </li>
                         {% endfor %}
