--- a/src/openforms/authentication/templates/of_authentication/registrator_subject_info.html
+++ b/src/openforms/authentication/templates/of_authentication/registrator_subject_info.html
@@ -28,13 +28,14 @@
             {% include "includes/forms/field_wrapper.html" with field=form.mode type='radio' only %}
 
             <div class="auth-mode auth-mode--citizen">
-
                 {% include "includes/forms/field_wrapper.html" with field=form.bsn type='bsn' only %}
 
-                <p role="group" class="utrecht-button-group utrecht-button-group--column utrecht-button-group--distanced">
-                    <button class="utrecht-button utrecht-button--submit utrecht-button--primary-action openforms-button-with-icon" type="submit">
+                <p role="group" class="utrecht-button-group utrecht-button-group--column openforms-form-navigation">
+                    <button class="utrecht-button utrecht-button--submit utrecht-button--primary-action openforms-form-navigation__next-button" type="submit">
                         {% trans "Continue" %}
-                        <i class="fa fas fa-icon fa-arrow-right-long" aria-hidden="true"></i>
+                        <span class="utrecht-icon" aria-hidden="true">
+                            <i class="fa fas fa-fw fa-icon" aria-hidden="true"></i>
+                        </span>
                     </button>
                 </p>
             </div>
@@ -42,19 +43,23 @@
             <div class="auth-mode auth-mode--company">
                 {% include "includes/forms/field_wrapper.html" with field=form.kvk only %}
 
-                <p role="group" class="utrecht-button-group utrecht-button-group--column utrecht-button-group--distanced">
-                    <button class="utrecht-button utrecht-button--submit utrecht-button--primary-action openforms-button-with-icon" type="submit">
+                <p role="group" class="utrecht-button-group utrecht-button-group--column openforms-form-navigation">
+                    <button class="utrecht-button utrecht-button--submit utrecht-button--primary-action openforms-form-navigation__next-button" type="submit">
                         {% trans "Continue" %}
-                        <i class="fa fas fa-icon fa-arrow-right-long" aria-hidden="true"></i>
+                        <span class="utrecht-icon" aria-hidden="true">
+                            <i class="fa fas fa-fw fa-icon" aria-hidden="true"></i>
+                        </span>
                     </button>
                 </p>
             </div>
 
             <div class="auth-mode auth-mode--employee">
-                <p role="group" class="utrecht-button-group utrecht-button-group--column utrecht-button-group--distanced">
-                    <button class="utrecht-button utrecht-button--submit utrecht-button--primary-action openforms-button-with-icon" type="submit" name="skip_subject" value="on">
+                <p role="group" class="utrecht-button-group utrecht-button-group--column openforms-form-navigation">
+                    <button class="utrecht-button utrecht-button--submit utrecht-button--primary-action openforms-form-navigation__next-button" type="submit" name="skip_subject" value="on">
                         {{ form.skip_subject.label }}
-                        <i class="fa fas fa-icon fa-arrow-right-long" aria-hidden="true"></i>
+                        <span class="utrecht-icon" aria-hidden="true">
+                            <i class="fa fas fa-fw fa-icon" aria-hidden="true"></i>
+                        </span>
                     </button>
                 </p>
             </div>
