--- a/src/openforms/submissions/templates/submissions/find_submission_for_cosign.html
+++ b/src/openforms/submissions/templates/submissions/find_submission_for_cosign.html
@@ -11,28 +11,45 @@
 
         <div class="openforms-card__body">
             {% block card_body %}
-                <p class="body">
-                    <form method="post" action=".">{% csrf_token %}
+                <div class="body">
+
+                    <form method="post" action="." id="find-submission-form">
+                        {% csrf_token %}
                         {% include "includes/forms/errorlist.html" with errors=form.non_field_errors only %}
-
                         {% include "includes/forms/field_wrapper.html" with field=form.code type='text' only %}
+                    </form>
 
-                        <p role="group" class="utrecht-button-group utrecht-button-group--column utrecht-button-group--distanced">
-                            <button class="utrecht-button utrecht-button--submit utrecht-button--primary-action openforms-button-with-icon" type="submit">
-                                {% trans "Submit" %}
-                                <i class="fa fas fa-icon fa-arrow-right-long" aria-hidden="true"></i>
-                            </button>
-                        </p>
+                    <form method="post" action="{% url "authentication:logout" %}" id="logout-form">
+                        {% csrf_token %}
                     </form>
-                    <form method="post" action="{% url "authentication:logout" %}">{% csrf_token %}
-                        <p role="group" class="utrecht-button-group utrecht-button-group--column utrecht-button-group--distanced">
-                            <button class="utrecht-link-button utrecht-link-button--html-button utrecht-link-button--openforms" type="submit" name="abort">
-                                <i class="fa fas fa-icon fa-xmark" aria-hidden="true"></i>
-                                {% trans "Log out" %}
-                            </button>
-                        </div>
-                    </form>
-                </p>
+
+                    <p role="group" class="utrecht-button-group utrecht-button-group--column openforms-form-navigation">
+                        <button
+                            class="utrecht-button utrecht-button--submit utrecht-button--primary-action openforms-form-navigation__next-button"
+                            type="submit"
+                            form="find-submission-form"
+                            name="next"
+                        >
+                            {% trans "Submit" %}
+                            <span class="utrecht-icon" aria-hidden="true">
+                                <i class="fa fas fa-fw fa-icon" aria-hidden="true"></i>
+                            </span>
+                        </button>
+
+                        <button
+                            class="utrecht-link-button utrecht-link-button--html-button openforms-abort-button"
+                            type="submit"
+                            form="logout-form"
+                            name="abort"
+                        >
+                            <span class="utrecht-icon" aria-hidden="true">
+                                <i class="fa fas fa-fw  fa-icon" aria-hidden="true"></i>
+                            </span>
+                            {% trans "Log out" %}
+                        </button>
+                    </p>
+
+                </div>
             {% endblock %}
         </div>
     </div>
