:bug: [#4917] Add missing class name for utrecht link
utrecht-link--html-a handles the hover/focus/active states

--- a/src/openforms/templates/includes/cookie-notice.html
+++ b/src/openforms/templates/includes/cookie-notice.html
@@ -17,7 +17,7 @@
             <span class="cookie-notice__text">
                 {% blocktrans trimmed %}
                 We use cookies to optimize and improve our website and services.
-                You can <a class="utrecht-link utrecht-link--openforms" href="{{ manage_url }}">manage your preferences</a>.
+                You can <a class="utrecht-link utrecht-link--html-a utrecht-link--openforms" href="{{ manage_url }}">manage your preferences</a>.
                 {% endblocktrans %}
             </span>
             <p role="group" class="utrecht-button-group utrecht-button-group--column utrecht-button-group--distanced">
