:bug: [#4917] Fixed cookie notice buttons alignment

--- a/src/openforms/templates/includes/cookie-notice.html
+++ b/src/openforms/templates/includes/cookie-notice.html
@@ -20,7 +20,7 @@
                 You can <a class="utrecht-link utrecht-link--html-a utrecht-link--openforms" href="{{ manage_url }}">manage your preferences</a>.
                 {% endblocktrans %}
             </span>
-            <p role="group" class="utrecht-button-group utrecht-button-group--column utrecht-button-group--distanced">
+            <p role="group" class="utrecht-button-group">
                 <button class="utrecht-button utrecht-button--submit utrecht-button--primary-action cookie-notice__accept" type="submit">
                     {% trans "Accept all" %}
                 </button>
