:truck: [#5252] Rename JSON Dump to Generic JSON (frontend)
As requested by Joeri. Note that we do not rename the plugin ID to avoid a data migration

--- a/src/openforms/scss/components/admin/_generic-json-variables.scss
+++ b/src/openforms/scss/components/admin/_generic-json-variables.scss
@@ -1,6 +1,6 @@
 @use 'microscope-sass/lib/bem';
 
-.json-dump-variables {
+.generic-json-variables {
   display: flex;
 
   @include bem.modifier('horizontal') {
